<resources>
    <string name="app_name">Currency Tracker</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- My strings -->
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="converter">Converter</string>
    <string name="currency">Currency</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="choose_currency">Choose currency</string>
    <string name="enter_count">Enter count</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="threedots">...</string>
    <string name="char_code">Char code</string>
    <string name="type">Type</string>

    <string name="rate_to_usd">Rate to USD</string>
    <string name="rate_to_eur">Rate to EUR</string>
    <string name="rate_to_rub">Rate to RUB</string>

    <string name="currency_tracker_splash">Currency Tracker</string>
    <string name="currency_name">Currency name</string>
    <string name="asc_list">A-Z</string>
    <string name="desc_list">Z-A</string>

    <string name="variable_language">Language</string>
    <string name="dark_theme">Dark theme</string>
    <string name="show">Show</string>
    <string name="list_format">List format</string>
    <string name="about_app">About app</string>
    <string name="theme">Theme</string>
    <string name="displaying">Displaying</string>

    <string name="RU">RU</string>
    <string name="ENG">ENG</string>

    <string name="All">All</string>
    <string name="Crypto">Crypto</string>
    <string name="Fiat">Fiat</string>

    <string name="Linear">Linear</string>
    <string name="Grid">Grid</string>

    <string name="same_currencies_selected">"Selected the same currencies"</string>
    <string name="null_enter_value">"Enter the number"</string>

    <string name="no_internet_connection_message">"No internet connection"</string>

</resources>