<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/theme">
        <SwitchPreferenceCompat
            app:key="theme"
            app:switchTextOff="Switch off"
            app:switchTextOn="Switch on"
            app:title="@string/dark_theme" />
        <ListPreference
            app:defaultValue="ENG"
            app:entries="@array/language_values"
            app:entryValues="@array/language_entries"
            app:key="language"
            app:title="@string/variable_language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/displaying">
        <ListPreference
            app:defaultValue="All"
            app:entries="@array/show_values"
            app:entryValues="@array/show_entries"
            app:key="show"
            app:title="@string/show"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="Linear"
            app:entries="@array/list_values"
            app:entryValues="@array/list_entries"
            app:key="list_format"
            app:title="@string/list_format"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_app">
        <Preference
            android:layout_height="match_parent"
            android:title="GitHub">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/GansA11es/CurrencyTracker" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>