<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppBar">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/void_clr"
                    app:srcCompat="@drawable/ic_arrow_back" />

                <TextView
                    style="@style/AppBarColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/details"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                style="@style/detailsSettingsBackground"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/item_name"
                        style="@style/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/currency"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/item_integrated_name"
                        style="@style/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/threedots"
                        android:textSize="24sp" />

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/item_char_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/char_code"
                        style="@style/textColor"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/textColor"
                        android:id="@+id/item_integrated_char_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/threedots"
                        android:textSize="24sp" />

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/item_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/type"
                        style="@style/textColor"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/textColor"
                        android:id="@+id/item_integrated_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/threedots"
                        android:textSize="24sp" />

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="15dp"
                    android:paddingBottom="8dp">

                    <TextView
                        style="@style/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/rate_to_usd"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/textColor"
                        android:id="@+id/item_integrated_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/threedots"
                        android:textSize="24sp" />

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        style="@style/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/rate_to_eur"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/textColor"
                        android:id="@+id/item_integrated_value_eu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/threedots"
                        android:textSize="24sp" />

                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        style="@style/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/rate_to_rub"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/textColor"
                        android:id="@+id/item_integrated_value_ru"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/threedots"
                        android:textSize="24sp" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>